--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,3 +3,43 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+:root {
+  --white: #fffffe;
+
+  --purple: #7f5af0;
+  --red: #e74c3c;
+  --green: ##2cb67d;
+  --gray: #94a1b2;
+  --dark-gray: #16161a;
+}
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+
+body {
+  background-color: var(--dark-gray);
+  color: var(--white);
+}
+
+body, input, textarea, select, button {
+  font: 400 1rem 'Roboto', sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
