feat: Rotas e pagina de Login

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,7 +11,7 @@
   --red: #e74c3c;
   --green: ##2cb67d;
   --gray: #94a1b2;
-  --dark-gray: #16161a;
+  --dark-gray: #121214;
 }
 
 @media (max-width: 1080px) {
