--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -1,3 +1,15 @@
+@keyframes fadeIn {
+  from {
+  	opacity: 0;
+    transform: translateY(-30px)
+  }
+  to {
+ 	  opacity: 1;
+    transform: translateY(0)
+  }
+}
+
+
 .contentContainer {
   max-width: 1120px;
   margin: 0 auto;
@@ -10,6 +22,8 @@
 
   img {
     height: 35rem;
+    animation: fadeIn 2s;
+    opacity: 1;
   }
 }
 
@@ -21,6 +35,8 @@
   flex-direction: column;
   border-radius: 5px;
   padding: 1rem;
+  animation: fadeIn 2s;
+  opacity: 1;
 
   button {
     width: 100%;
